avformat/mpegts: detect synchronous metadata KLV more reliably

The mpegts code historically tries to strip (the first) metadata access unit
header from synchronous KLV metadata, but the detection for such streams was
unreliable causing strips of asynchronous metadata or ID3 as well.

MISB ST 1402 specifies required stream type, stream id and registration
descriptor (which eventually maps to the codec ID) so let's use all of these
for reliable detection.

Fixes a regression caused by 468615f2045da325e0f73e8e668d49cf456ccb37.

Fixes ticket #10828, #10883.

Signed-off-by: Marton Balint <cus@passwd.hu>